--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -18,28 +18,8 @@
           "type": "FILEPATH"
         },
         {
-          "name": "CMAKE_CXX_COMPILER_AR",
-          "value": "/usr/bin/g++-ar-10",
-          "type": "FILEPATH"
-        },
-        {
-          "name": "CMAKE_CXX_COMPILER_RANLIB",
-          "value": "/usr/bin/g++-ranlib-10",
-          "type": "FILEPATH"
-        },
-        {
           "name": "CMAKE_C_COMPILER",
           "value": "/usr/bin/gcc-10",
-          "type": "FILEPATH"
-        },
-        {
-          "name": "CMAKE_C_COMPILER_AR",
-          "value": "/usr/bin/gcc-ar-10",
-          "type": "FILEPATH"
-        },
-        {
-          "name": "CMAKE_C_COMPILER_RANLIB",
-          "value": "/usr/bin/gcc-ranlib-10",
           "type": "FILEPATH"
         },
         {
@@ -59,7 +39,7 @@
         },
         {
           "name": "CMAKE_CXX_FLAGS",
-          "value": "-Wall -Wno-unknown-pragmas -Wno-comment -std=c++2a -lstdc++fs",
+          "value": "-Wall -Wno-unknown-pragmas -Wno-comment",
           "type": "STRING"
         }
       ],
@@ -85,28 +65,8 @@
           "type": "FILEPATH"
         },
         {
-          "name": "CMAKE_CXX_COMPILER_AR",
-          "value": "/usr/bin/g++-ar-10",
-          "type": "FILEPATH"
-        },
-        {
-          "name": "CMAKE_CXX_COMPILER_RANLIB",
-          "value": "/usr/bin/g++-ranlib-10",
-          "type": "FILEPATH"
-        },
-        {
           "name": "CMAKE_C_COMPILER",
           "value": "/usr/bin/gcc-10",
-          "type": "FILEPATH"
-        },
-        {
-          "name": "CMAKE_C_COMPILER_AR",
-          "value": "/usr/bin/gcc-ar-10",
-          "type": "FILEPATH"
-        },
-        {
-          "name": "CMAKE_C_COMPILER_RANLIB",
-          "value": "/usr/bin/gcc-ranlib-10",
           "type": "FILEPATH"
         },
         {
@@ -126,7 +86,7 @@
         },
         {
           "name": "CMAKE_CXX_FLAGS",
-          "value": "-Wall -Wno-unknown-pragmas -Wno-comment -std=c++2a -lstdc++fs",
+          "value": "-Wall -Wno-unknown-pragmas -Wno-comment",
           "type": "STRING"
         }
       ],
@@ -154,28 +114,8 @@
           "type": "FILEPATH"
         },
         {
-          "name": "CMAKE_CXX_COMPILER_AR",
-          "value": "/usr/bin/g++-ar-10",
-          "type": "FILEPATH"
-        },
-        {
-          "name": "CMAKE_CXX_COMPILER_RANLIB",
-          "value": "/usr/bin/g++-ranlib-10",
-          "type": "FILEPATH"
-        },
-        {
           "name": "CMAKE_C_COMPILER",
           "value": "/usr/bin/gcc-10",
-          "type": "FILEPATH"
-        },
-        {
-          "name": "CMAKE_C_COMPILER_AR",
-          "value": "/usr/bin/gcc-ar-10",
-          "type": "FILEPATH"
-        },
-        {
-          "name": "CMAKE_C_COMPILER_RANLIB",
-          "value": "/usr/bin/gcc-ranlib-10",
           "type": "FILEPATH"
         },
         {
@@ -195,7 +135,7 @@
         },
         {
           "name": "CMAKE_CXX_FLAGS",
-          "value": "-Wall -Wno-unknown-pragmas -Wno-comment -std=c++2a -lstdc++fs",
+          "value": "-Wall -Wno-unknown-pragmas -Wno-comment",
           "type": "STRING"
         }
       ],
@@ -221,28 +161,8 @@
           "type": "FILEPATH"
         },
         {
-          "name": "CMAKE_CXX_COMPILER_AR",
-          "value": "/usr/bin/g++-ar-10",
-          "type": "FILEPATH"
-        },
-        {
-          "name": "CMAKE_CXX_COMPILER_RANLIB",
-          "value": "/usr/bin/g++-ranlib-10",
-          "type": "FILEPATH"
-        },
-        {
           "name": "CMAKE_C_COMPILER",
           "value": "/usr/bin/gcc-10",
-          "type": "FILEPATH"
-        },
-        {
-          "name": "CMAKE_C_COMPILER_AR",
-          "value": "/usr/bin/gcc-ar-10",
-          "type": "FILEPATH"
-        },
-        {
-          "name": "CMAKE_C_COMPILER_RANLIB",
-          "value": "/usr/bin/gcc-ranlib-10",
           "type": "FILEPATH"
         },
         {
@@ -262,7 +182,7 @@
         },
         {
           "name": "CMAKE_CXX_FLAGS",
-          "value": "-Wall -Wno-unknown-pragmas -Wno-comment -std=c++2a -lstdc++fs",
+          "value": "-Wall -Wno-unknown-pragmas -Wno-comment",
           "type": "STRING"
         }
       ],
@@ -288,28 +208,8 @@
           "type": "FILEPATH"
         },
         {
-          "name": "CMAKE_CXX_COMPILER_AR",
-          "value": "/usr/bin/g++-ar-10",
-          "type": "FILEPATH"
-        },
-        {
-          "name": "CMAKE_CXX_COMPILER_RANLIB",
-          "value": "/usr/bin/g++-ranlib-10",
-          "type": "FILEPATH"
-        },
-        {
           "name": "CMAKE_C_COMPILER",
           "value": "/usr/bin/gcc-10",
-          "type": "FILEPATH"
-        },
-        {
-          "name": "CMAKE_C_COMPILER_AR",
-          "value": "/usr/bin/gcc-ar-10",
-          "type": "FILEPATH"
-        },
-        {
-          "name": "CMAKE_C_COMPILER_RANLIB",
-          "value": "/usr/bin/gcc-ranlib-10",
           "type": "FILEPATH"
         },
         {
@@ -329,7 +229,7 @@
         },
         {
           "name": "CMAKE_CXX_FLAGS",
-          "value": "-Wall -Wno-unknown-pragmas -Wno-comment -std=c++2a -lstdc++fs",
+          "value": "-Wall -Wno-unknown-pragmas -Wno-comment",
           "type": "STRING"
         }
       ],
@@ -355,28 +255,8 @@
           "type": "FILEPATH"
         },
         {
-          "name": "CMAKE_CXX_COMPILER_AR",
-          "value": "/usr/bin/g++-ar-10",
-          "type": "FILEPATH"
-        },
-        {
-          "name": "CMAKE_CXX_COMPILER_RANLIB",
-          "value": "/usr/bin/g++-ranlib-10",
-          "type": "FILEPATH"
-        },
-        {
           "name": "CMAKE_C_COMPILER",
           "value": "/usr/bin/gcc-10",
-          "type": "FILEPATH"
-        },
-        {
-          "name": "CMAKE_C_COMPILER_AR",
-          "value": "/usr/bin/gcc-ar-10",
-          "type": "FILEPATH"
-        },
-        {
-          "name": "CMAKE_C_COMPILER_RANLIB",
-          "value": "/usr/bin/gcc-ranlib-10",
           "type": "FILEPATH"
         },
         {
@@ -396,7 +276,7 @@
         },
         {
           "name": "CMAKE_CXX_FLAGS",
-          "value": "-Wall -Wno-unknown-pragmas -Wno-comment -std=c++2a -lstdc++fs",
+          "value": "-Wall -Wno-unknown-pragmas -Wno-comment",
           "type": "STRING"
         }
       ],
